[package]
name = "clash4linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qt_widgets = "0.5"
qt_core = "0.5"
cpp_core = "0.6.0"
reqwest = {version = "0.11.15", features = ["blocking", "json"]}
serde_json = "1.0"
